styles.css
.wrapper {
    display: flex;
    flex-direction: column;
}

.title {
    text-align: center;
}

#newbook,
form button,
.readbtn {
    border: 2px solid black;
    border-radius: 8px;
    background: white;
}

.readbtn {
    bottom: 10px;
    position: absolute;
}

button:hover {
    opacity: 0.7;
}

#newbook {
    position: fixed;
    top: 15px;
    right: 3rem;
    padding: 5px 1rem;
}

h1 {
    font-size: 3rem;
    font-weight: 900;
}

main {
    flex: 1;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
    grid-auto-rows: min-content;
    gap: 1em;
    padding: 1rem;
    justify-items: center;
}

.book {
    width: 150px;
    height: 10rem;
    background-color: grey;
    border: 3px solid black;
    box-sizing: border-box;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    gap: 15px;
    position: relative;
    padding: 5px;
}

.book.read {
    background: greenyellow;
}

.remove {
    position: absolute;
    top: 5px;
    right: 5px;
    aspect-ratio: 1 / 1;
    padding: 0;
    width: 1.5lh;
    border: 2px solid black;
    border-radius: 24px;
}

dialog {
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    margin: 0;
}


form {
    padding: 1rem;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(2, 1fr);
    justify-items: end;
    gap: 1rem;
    grid-column: 1 / -1;
}

form input {
    border-radius: 8px;
    padding: 5px;
    border: 2px solid black;
    outline: none;
}

.error {
    border-color: red;
}

p#titleform,
p#authorform {
    grid-column: 1 / -1;
}

form button {
    place-self: center;
}

dialog::backdrop {
    backdrop-filter: blur(10px);
}

